# idea-chain

./: Cargo.toml
backend/: Cargo.toml
backend/migrations/2020-12-05-223214_create_users/: up.sql
backend/src/: main.rs  models.rs  schema.rs
backend/src/services/: user.rs
eth/: Patent.sol
frontend/: package-lock.json  package.json  rollup.config.js
frontend/public/: global.css
frontend/src/: App.svelte  abi.js  api.js  auth.js  eth.js
frontend/src/components/: AddBtn.svelte  AddPatentForm.svelte  Content.svelte  ContractList.svelte  Menu.svelte  MyPatentList.svelte  PatentList.svelte
src/: eth.rs  main.rs  models.rs
