[package]
name = "patent-app"
version = "0.1.0"
authors = ["Timur Mustafin <t.mustafin@innopolis.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"